ui/scss/component/_file-render.scss
.file-page {
  .card-stack {
    .claim-preview {
      &:hover {
        .claim-preview__title {
          color: var(--color-text);
        }
      }
      .claim-preview__title {
        &:hover {
          color: var(--color-link);
        }
      }
    }
  }

  .file-page__recommended {
    .claim-preview__wrapper {
      &:hover {
        .claim-preview__title {
          color: var(--color-link);
        }
      }
    }
  }

  .file-page__video-container + .card,
  .file-render + .card,
  .content__cover + .card,
  .card + .file-render,
  .card + .file-page__video-container,
  .card + .content__cover {
    margin-top: var(--spacing-m);
  }

  .card + .file-render {
    margin-top: var(--spacing-m);
  }

  .file-page__md {
    .file-viewer--document {
      margin-top: var(--spacing-l);

      @media (min-width: $breakpoint-small) {
        margin-top: var(--spacing-xl);
      }

      .button {
        display: inline;

        .button__content {
          display: inline;
        }
      }

      .claim-link {
        .button {
          display: block;

          .button__content {
            display: block;
          }
        }
      }
    }

    .media__actions {
      justify-content: center;
    }

    .file-page__secondary-content {
      display: flex;
      flex-direction: column;
      padding: 0 var(--spacing-m);
    }
  }

  > * {
    width: 100%;
  }

  @media (max-width: $breakpoint-medium) {
    flex-direction: column;
  }
}

.file-render {
  width: 100%;
  height: 100%;
  z-index: 1;
  overflow: hidden;
  max-height: var(--inline-player-max-height);
}

.file-render--video {
  background-color: black;
  border-radius: var(--border-radius);

  &:after {
    content: '';
    position: absolute;
    background-color: black;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 2;
    animation: fadeInFromBlack 2s ease;
    opacity: 0;
    pointer-events: none;
  }
}

.file-render--scheduledLivestream {
  background-image: url('//spee.ch/odysee-streaming-png:2.png?quality=80&height=960&width=1920');
  background-size: cover;
  margin-top: var(--spacing-m);
}

@keyframes fadeInFromBlack {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

.file-render--embed {
  border-radius: 0;
  position: fixed;
  max-height: none;
}

.file-render--img-container {
  width: 100%;
  aspect-ratio: 16 / 9;
}

.file-render--post-container {
  min-height: 30vh;
}

.file-render__header {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.file-viewer {
  width: 100%;
  height: 100%;

  iframe,
  webview,
  img {
    width: 100%;
    height: 100%;
    object-fit: contain;
    max-height: var(--inline-player-max-height);
  }
  video {
    cursor: pointer;
  }
  .video-js.vjs-user-inactive.vjs-playing {
    video {
      cursor: none;
    }
  }
}

.file-render__viewer--comic {
  position: relative;
  overflow: hidden;
  .comic-viewer {
    width: 100%;
    height: calc(100vh - var(--header-height) - var(--spacing-m) * 2);
    max-height: var(--inline-player-max-height);
  }
}

.file-viewer--iframe {
  display: flex; /*this eliminates extra height from whitespace, if someone edits this with a better technique, tell Jeremy*/
  /*
  ideally iframes would dynamiclly grow, see <IframeReact> for a start at this
  for now, since we don't know size, let's make as large as we can without being larger than available area
  */
  iframe {
    height: calc(100vh - var(--header-height) - var(--spacing-m) * 2);
  }
}

.file-render__viewer--three {
  position: relative;
  overflow: hidden;

  .three-viewer {
    height: calc(100vh - var(--header-height) - var(--spacing-m) * 2);
    max-height: var(--inline-player-max-height);
  }
}

.file-viewer__overlay {
  position: absolute;
  left: auto;
  right: auto;
  height: 100%;
  width: 100%;
  z-index: 2;
  color: var(--color-white);
  font-size: var(--font-body); /* put back font size from videojs change*/

  background-color: rgba(0, 0, 0, 0.9);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: var(--spacing-l);

  @media (max-width: $breakpoint-small) {
    font-size: var(--font-small);
  }

  .button--uri-indicator,
  .button--link {
    color: var(--color-white);
  }
}

.file-viewer_embed-ended-title {
  max-width: 100%;
  p {
    font-size: 6vh;
    white-space: pre-wrap;
  }
}

.content__viewer--floating {
  .file-viewer__overlay-title,
  .file-viewer__overlay-secondary {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    max-width: 100%;
  }
}
@media (max-width: $breakpoint-small) {
  .file-viewer__overlay-title,
  .file-viewer__overlay-secondary {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    max-width: 100%;
    // margin-bottom: 0 !important;
  }
  .autoplay-countdown__counter {
    margin-top: var(--spacing-xxs) !important;
  }
}

.file-viewer__overlay-title {
  text-align: center;
  font-size: var(--font-large);
  margin-bottom: var(--spacing-m);
}
.file-viewer__overlay-secondary {
  color: var(--color-text-subtitle);
  margin-bottom: var(--spacing-m);
}
.file-viewer__overlay-actions {
  .button + .button {
    margin-left: var(--spacing-m);
  }

  .button--link {
    vertical-align: middle;
  }
}

.file-viewer__overlay-logo {
  color: var(--color-white);
  font-weight: bold;

  .icon {
    height: 30px;
    stroke-width: 5px;
  }
}

.file-viewer--is-playing:not(:hover) .file-viewer__embedded-header {
  display: none;
}
/* ... */

